# smart-home-multi-agent-collaboration-system

./: .dockerignore  .gitignore  DOCKER_README.md  LICENSE  MIGRATION_GUIDE.md  MossAi_论文.md  README.md  README_CHAT_INTEGRATION.md  Smart_Home_Multi-Agent_Collaboration_System_Thesis.md  config.yaml  database_config.py  docker-compose.yml  docker-deploy.bat  docker-deploy.sh  main.py  nginx.conf  package.json  pyproject.toml  requirements.txt  server.py  start_agents.bat  start_agents.sh  test.py  快速开始.md  快速测试.md  更新说明.md
agents/: AGENTS_PORTS.md  README.md  config_loader.py  main.py  test_integrated_system.py  token_extractor.py
agents/air_cleaner_agent/: README.md  __init__.py  __main__.py  agent.py  agent_executor.py  executor.py  main.py  pyproject.toml  skills_catalog.py  tools.py
agents/air_conditioner_agent/: README.md  __init__.py  __main__.py  agent.py  executor.py  main.py  pyproject.toml  server.py  tools.py
agents/bedside_lamp_agent/: README.md  __init__.py  __main__.py  agent.py  executor.py  main.py  pyproject.toml  tools.py
agents/conductor_agent/: README.md  __init__.py  __main__.py  agent.py  agent_executor.py  dida_tools.py  esp32_audio_tools.py  executor.py  main.py  pyproject.toml  server.py  test_baidu_search.py  test_conductor.py  tools.py  user_behavior.db  wechat_tools.py  windows_tools.py
agents/data_mining_agent/: CONFIDENCE_FEEDBACK_GUIDE.md  LOGGING_GUIDE.md  README.md  __init__.py  __main__.py  agent.py  executor.py  main.py  pyproject.toml  tools.py
agents/dw_agent/: agent.py  agent_executor.py  executor.py  main.py  server.py  tools.py  user_behavior.db
agents/test_miio/: Iot.py  air_purifier_miot.py  client.py  debug_lamp.py  main.py  test_lamp_tools.py  test_purifier_tools.py  token_extractor.py
app/: .env.development  .gitignore  .oxlintignore  app.Dockerfile  h5.Dockerfile  index.html  nginx.conf  package.json  pnpm-lock.yaml  tsconfig.json  vite.config.ts  修复步骤.md  配置说明.md
app/backend/: cjpm.toml
app/backend-python/: README.md  __init__.py  __main__.py  config.py  database.py  main.py  pyproject.toml  requirements.txt
app/backend-python/api/: auth.py  chat.py  config.py  conversation.py  device_operations.py  xiaomi_auth.py
app/backend-python/models/: chat.py  xiaomi_auth.py
app/backend-python/services/: chat_history_service.py  conductor_service.py  config_service.py  device_operation_service.py
app/backend/.arts/: launch.json  settings.json
app/backend/src/: main.cj
app/src/: App.sass  App.tsx  main.tsx
app/src-tauri/: Cargo.toml  tauri.conf.json
app/src-tauri/src/: main.rs
app/src/api/: auth.ts  backend.ts  chat.ts  config.ts  dida.ts  xiaomi.ts
app/src/components/: Header.tsx
data/: .gitignore  01_create_tables.sql  02_insert_users.sql  03_insert_device_operations.sql  04_insert_environment_data.sql  05_insert_user_habits.sql  06_insert_usage_stats.sql  07_insert_smart_scenes.sql  README.md  ai_config.sql  import_all_data.sql  init_config.sql
data/Mysql/: ai_config.sql  chat_history.sql  dida_credentials.sql  init_config.sql  update_agent_prompts.sql  users.sql  xiaomi_credentials.sql
data/Starrocks/: ai_config.sql  chat_history.sql  dida_credentials.sql  init_config.sql  test_device_operations.sql  update_agent_prompts.sql  user_feedback_table.sql  users.sql  xiaomi_credentials.sql
docker/: Dockerfile  starrocks-compose.yaml
esp32_arduio/: .clangd  .env.example  .gitignore  CMakeLists.txt  README.md  sdkconfig.defaults
esp32_arduio/main/: CMakeLists.txt  Kconfig.projbuild  audio_mcp.c  audio_mcp.h  main.c  mcp_http.c  mcp_http.h
esp32_arduio/tools/: patch_compile_commands.py
mcp/: device_query_mcp.py  verify_xiaomi_devices.py  xiaomi_device_mcp.py
mcp/didatodolist-mcp/: .dockerignore  .gitignore  docker-compose.yml  init_data.py  mcp_server.py
mcp/mcp_server_wechat/: requirements.txt
mcp_server/: __main__.py  device_query_mcp.py  mcp_gateway_server.py  pyproject.toml
mcp_server/device_query_mcp/: main.py
mcp_server/didatodolist-mcp/: .env.example  Dockerfile  README.md  main.py  requirements.txt
mcp_server/didatodolist-mcp/models/: base.py  task.py
mcp_server/didatodolist-mcp/tools/: __init__.py  official_api.py  tag_tools.py
mcp_server/didatodolist-mcp/utils/: asgi_auth.py  http.py
mcp_server/mcp_server.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
script/: install_dependencies.ps1  start_agents.bat  start_agents.ps1  start_agents.sh  start_all_services.ps1  stop_agents.ps1  test_chat_integration.ps1
script/start/: start_moss_ai.bat  start_moss_ai.ps1  start_moss_ai.sh
video/gesture_yolo_plugin/: .env.example  .gitignore  README.md  __init__.py  __main__.py  config.py  engine.py  image_utils.py  pyproject.toml  schemas.py  service.py  storage.py
web/: .dockerignore  .env.development  .oxlintrc.json  README.md  docker-compose.app.yml  index.html  nginx.conf  package.json  pnpm-lock.yaml  tsconfig.json  vite.config.ts
web/backend-cangjie/: cjpm.toml
web/backend-python/: .dockerignore  .env.example  .python-version  __main__.py  app.py  backend.Dockerfile  database.py  env.py  pyproject.toml  requirements.txt
web/backend-python/api/: auth.py  chat.py  config.py  conversation.py  device_operations.py  dida_auth.py  knowledge_base.py  xiaomi_auth.py
web/backend-python/conductor/: __init__.py  agent.py  config_loader.py  dida_tools.py  esp32_audio_tools.py  rag_tool.py  tools.py  wechat_tools.py  windows_tools.py
web/backend-python/data/chroma_db/: chroma.sqlite3
web/backend-python/mcp/: dida_mcp_service.py  mcp_device_service.py
web/backend-python/mcp_clients/: __init__.py  dida_mcp_service.py  esp32_audio_mcp_service.py  mcp_device_service.py  windows_mcp_service.py
web/backend-python/models/: chat.py  dida_auth.py
web/backend-python/rag/: __init__.py  knowledge_base.py
web/backend-python/services/: agent_runtime_service.py  chat_history_service.py  conductor_service.py  config_service.py  conversation_service.py  device_operation_service.py  dida_mcp_service.py  mcp_device_service.py  wechat_mcp_service.py
web/src/: App.tsx
(+159 files in other folders)
