[project]
name = "moss-ai"
version = "1.0.0"
description = "Moss AI 智能家居系统"
readme = "README.md"
dependencies = [
    # FastMCP
    "fastmcp>=0.5.0",
    "numpy>=1.24.0",
    "scikit-learn>=1.3.0",
    "jieba"
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
dev-dependencies = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
]

[tool.uv.workspace]
members = [
    "mcp_server",
]

[tool.hatch.build.targets.wheel]
packages = ["agents", "app"]
