[project]
name = "mcp-server"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.135.3",
    "fastmcp>=3.2.3",
    "pycryptodome>=3.23.0",
    "pymysql>=1.1.2",
    "pyyaml>=6.0.3",
    "requests>=2.33.1",
    "pytz>=2024.1",
    "python-dotenv>=1.0.0",
    "mcp>=1.0.0",
]

[tool.uv.workspace]
members = [
    "mcp_server",
]

[tool.hatch.build.targets.wheel]
packages = ["."]
