[project]
name = "bedside-lamp-agent"
version = "1.0.0"
description = "Moss AI 床头灯控制 Agent"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "a2a>=0.1.0",
    "click>=8.0.0",
    "uvicorn[standard]>=0.24.0",
    "httpx>=0.25.0",
    "PyYAML>=6.0.0",
    "starlette>=0.27.0",
    "python-miio>=0.5.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
dev-dependencies = []

[tool.hatch.build.targets.wheel]
packages = ["."]

