[project]
name = "data-mining-agent"
version = "1.0.0"
description = "Smart Home Multi-Agent Collaboration System 用户行为数据挖掘与场景分析 Agent"
requires-python = ">=3.10"
dependencies = [
    "click>=8.0.0",
    "uvicorn[standard]>=0.24.0",
    "httpx>=0.25.0",
    "PyYAML>=6.0.0",
    "starlette>=0.27.0",
    "pymysql>=1.0.0",
    "numpy>=1.24.0",
    "scikit-learn>=1.3.0",
    "a2a-sdk[all]>=1.0.3",
    "langchain-core>=1.4.0",
    "langchain-openai>=1.2.1",
    "langgraph>=1.2.0",
    "python-dotenv>=1.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
dev-dependencies = []

[tool.hatch.build.targets.wheel]
packages = ["."]

