[project]
name = "moss-ai-backend"
version = "1.0.0"
description = "Moss AI 智能家居系统后端服务"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    "pydantic>=2.5.0",
    "httpx>=0.25.0",
    "PyMySQL>=1.1.0",
    "SQLAlchemy>=2.0.0",
    "PyYAML>=6.0.0",
    "python-dotenv>=1.0.0",
    "pycryptodome>=3.19.0",
    "requests>=2.31.0",
    "Pillow>=10.0.0",
    "fastmcp>=3.2.3",
    "pytz>=2024.1",
    "a2a-sdk[all]>=1.0.3",
    "langchain-core>=0.3",
    "langchain-openai>=0.3",
    "langgraph>=0.4",
    "jieba>=0.42.1",
    "pandas>=2.3.3",
    "matplotlib>=3.10.9",
    "chromadb>=0.6.0",
    "langchain-text-splitters>=0.3.0",
]

[project.scripts]
moss-ai-backend = "__main__:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = []

[tool.hatch.build.targets.wheel]
packages = ["."]

